--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ server.port=8010
 spring.application.name=discovery_service
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8010
+eureka.client.serviceUrl.defaultZone=http://localhost:8010/eureka
